2011-05-06  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* docs/plotstyles.gnu docs/gnuplot.doc: Add an illustration of the
	'newhistogram' command.

2011-05-06  Ethan A Merritt  <merritt@u.washington.edu>

	* INSTALL: Update the description of readline options and mention
	the ./prepare script.

2011-05-06  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* config/makefile.nt: Add missing support for GDI+. Bug #3298244

2011-05-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/msvc/Makefile: New file for Microsoft Visual C++. Builds
	out of tree. Intended to eventually replace config/makefile.nt.

	config/Makefile.am.in (Makefile.am): Add new Makefile.

2011-05-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.h src/datafile.c src/plot2d.c src/plot3d.c:
	Change prototype of df_set_key_title_columnhead() to match that of
	df_set_key_title().

2011-05-05  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_set_font) src/win/wgraph.c (drawgraph): Defer
	determination of default font name and size. Fixes bug addressed
	by change of 2010-02-22, but without the need for do_string_replot()

	* src/win/wgraph.c (drawgraph): New variable fill_color to track
	color of fills. Use cached color brush for transparent solid fills
	instead of creating a new one.

	* src/win/wgraph.c (drawgraph) src/win/wgdiplus.c|h: Add support for
	antialiased solid filled (transparent) polygons.

	* src/win/wpause.c (WndPauseProc): Use default dialog font instead of
	fixed width font for pause dialog.

	* src/readline.c (readline): Tab is a printable character in some
	locales, ie. isprint(TAB)>0.

	* src/win/wgraph.c (MakeFonts): Reduce size of tics and point symbols
	by 20%.

2011-05-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile: Build support for lua tikz related TeX files.
	Use Makefile.maint to update version.c. Update install target to match
	directory layout of distribution and include share/lua/, share/LaTeX/, 